# page-analyzer

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: page_analyzer_check.yml
page_analyzer/: PageRepository.py  UrlsRepository.py  __init__.py  app.py  page_repository.py  parser.py  repositories.py
page_analyzer/templates/: base.html  flash.html  index.html  show.html  url.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
