[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Web application for analyzing SEO of a site"
authors = ["Osayanny <osayanni7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
validators = "^0.34.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
flake8-isort = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
